[build-system]
requires = [
    "setuptools>=64",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyvns"
version = "2.0.2"
authors = [
    { name = "Linpg Foundation", email = "yudong9912@gmail.com" },
]
description = "VNS (Visual Novel Script), a universal scripting language for creating scripts for visual novel games."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
]
dependencies = ["mypy"]

[project.urls]
"Homepage" = "https://github.com/LinpgFoundation/vns"
"Bug Tracker" = "https://github.com/LinpgFoundation/vns/issues"

[project.entry-points.pyinstaller40]
hook-dirs = "pyvns.__pyinstaller:get_hook_dirs"

[tool.mypy]
python_version = "3.12"
disallow_any_generics = true
disallow_untyped_defs = true
disallow_untyped_calls = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true

[tool.black]
target-version = ['py312']

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*"]