[build-system]
requires = [
    "setuptools>=64",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyvns"
version = "2.3.1"
authors = [
    { name = "Linpg Foundation", email = "yudong9912@gmail.com" },
]
description = "VNS (Visual Novel Script), a universal scripting language for creating scripts for visual novel games."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
]
dependencies = ["mypy"]

[project.urls]
"Homepage" = "https://github.com/LinpgFoundation/vns"
"Bug Tracker" = "https://github.com/LinpgFoundation/vns/issues"

[project.entry-points.pyinstaller40]
hook-dirs = "pyvns.__pyinstaller:get_hook_dirs"

[tool.mypy]
python_version = "3.13"
disallow_any_generics = true
disallow_untyped_defs = true
disallow_untyped_calls = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true

[tool.black]
target-version = ['py313']

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*"]

[tool.linpgtoolbox.options]
include_pyinstaller = true
auto_cmake = true

[tool.linpgtoolbox]
ignores = [".*extern$"]
includes = [
    "../LICENSE",
    "../README.md"
]